Larger input font on mobile to avoid auto-zoom

--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,10 @@ select:focus {
     select {
         font-size: 16px !important;
     }
+
+    .grid-input  {
+        font-size: 16px !important;
+    }
 }
 
 /* Deprecated */
